css/app.css
/* ... */
.game-icons .game-icon {
  height: 50px;
  flex: 1 1 auto;
  padding: 10px 10px;
  opacity: 0.8;
  cursor: pointer;
  background-color: #1b1d28;
}
.game-icon.is-selected {
  background-color: #050607;
}
.game-icon:hover {
  opacity: 1;
}
.game-icons .game-icon img {
  width: auto;
  height: 100%;
}

.top-bar {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 48px;
  line-height: 48px;
  background-color: #0e1016;
  padding: 0px;
  z-index: 5;


}

.top-feature-bar {
  position: fixed;
  top: 48px;
  left: 0;
  width: 100%;
  height: auto;
	line-height:48px;
  background-color: #090a0c;
  padding-top: 0px;
	padding-bottom: 0px;
  z-index: 5;
	text-align:center;
	border-top:1px solid #1b1e28;
}
.top-feature-bar .feature-button {
  font-weight:600;
  padding:6px;
  padding-left:8px;
  padding-right:8px;
  border:2px solid #3a577e;
  text-transform: uppercase;
  font-size:12px;
  color:#3a577e;
  font-weight:600;
  border-radius:10px;
  margin: 0px;
  cursor: pointer;
  opacity: .8;
}
.top-feature-bar .feature-button:hover {
  opacity: 1;
}

.top-bar .logo {
  height: 100%;

}
.top-bar .top-bar-icons {
  float: right;
	padding-right:3px;
  height: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
}
.top-bar .top-bar-icons img {
  width: 26px;
  height: auto;
  cursor: pointer;
  margin-left: 10px;
  opacity: 1.0;
  border: 2px solid #999;
  border-radius: 5px;
  cursor: pointer;
}
.top-bar .top-bar-icons img:hover {
  opacity: .5;
}

.info .desktop-text .top-bar-icons img:hover {
  opacity: .5;
	cursor: pointer;
}

.index-wrapper {
  margin-top: 100px;
}
.animation-title {
  margin-top: 0px;
}
#game-info {
  background-color: #0e1016;
  color: #ccc;
	text-transform:uppercase;
	font-size:12px;
	font-weight:600;
}
#table-header-row {
  background-color: #1e2329;
  color: #666666;
}

.mobile-text {
  display: none;
}

.top-bar-info {
	padding-right: 6px;
	font-size: 12px;
	text-transform: uppercase;
	color: #666;
	font-weight: 600;
}

.top-bar-logo {
	padding-right: 6px;
	font-size: 12px;
	text-transform: uppercase;
	color: #fff;
	font-weight: 600;
}

.preview-video {width:100%;overflow:hidden; }

#header-text {
 
	 padding-top:80px; padding-bottom:80px;

}
@media (max-width: 600px) {
  
	.legal-center-div {width:100%;}
	
	body {width:100%;}
	
	.index-wrapper {
	  margin-top: 190px;
	}
	
	.top-feature-bar {
	  position: fixed;
	  top: 48px;
	  left: 0;
	  width: 100%;
	  height: auto;
		line-height:40px;
	  background-color: ;
	  padding-top: 18px;
		padding-bottom: 0px;
	  z-index: 5;
		border-top:1px solid #1b1e28;
			text-align:center;

	}
	
  #im-info {
    
    font-size:14px;
    padding:5px;
    
  }
  #video-and-chat {
    flex-direction: column;
    height: auto;
  }
  
  .main-title {
    color:#ccc; font-size:16px; font-weight:500;
  }
  

  .buy-buton {
    background-color:#3f3960;
    border:1px solid #3f3960;
    padding:10px 22px 10px 22px;
    color:#ccc;
		text-transform:uppercase;
    border-radius:12px;
    font-size:18px;
		
  }

  .flex-container {
    font-size: 12px;
  }

  .channel-avatar-flex {
    display: none;
  }

  .channel-name-flex {
    -webkit-flex: 1 0 0;
    flex: 1 0 0;
  }

  .retention-flex {
    display: none;
  }

  .viewers-flex {
    display: none;
  }

  .card-value-flex {
    display: none;
  }

  .im-chat {
    width: auto;
  }
  
  .desktop-text {
    display: none;
  }
  .mobile-text {
    display: inline;
  }

  .channel-name-flex {
    min-width: 60px;
    max-width: auto;
    overflow: hidden;
    text-overflow: ellipsis;
  }

  .game-icons .game-icon {
    height: auto;
    max-height: 60px;
    padding: 5px;
  }
  .game-icons .game-icon img {
    width: 100%;
    height: auto;
  }

  .top-bar-info {
	  display: none;
  }
	
  .im-button {
    margin: 1px;
    padding: 0;
  }

  .game-header-image {
	 width: 90%;

  }
	
	.preview-video {display: none; }


  #header-text {
	  display: none;
		text-align:center;
		 padding-top:10px; padding-bottom:10px;

  }
}


/*****  OVERLAY POPUP ******/

.overlay-alert {
  z-index: 1000;
  position: absolute;
  top: 0;
  left: 0;
  text-align: left;
  width: 100%;
  height: 200%;
  background: rgba(0,0,0,0.9);
}

.overlay-container {
  background-color: #121317;
  position: fixed;
  font-family: "Lato", Helvetica, Arial, "Lucida Grande", sans-serif;
  font-weight: 500;
  letter-spacing: 1.1px;
  width: auto;
  height: auto;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -webkit-transform: translate(-50%, -50%);
  border-radius: 5px;
  z-index: 2000;
  overflow: hidden;   /* keeps rounded edge on top of title bar */
}

.overlay-title {
  line-height: 28px;
  font-size: 16px;
  color: #fff;
  background-color: #1b1e28;
  text-align: center;
  height: 60px;
  line-height: 60px;
  white-space: nowrap;
  text-transform: uppercase;
}

.overlay-message {
  font-size: 14px;
  line-height: 20px;
  color: #fff;
  display: flex;
  flex-direction: row;
  align-items: center;
  align-content: space-around;
  justify-content: space-around;
  height: 170px;
  width: 560px;
  padding: 0 20px;
  overflow: hidden;
}
.overlay-message.narrow {
  width: auto;
  max-width: 560px;
  min-width: 300px;
}
.overlay-message > .overlay-im-icon {
  max-height: 70px;
  background-color: transparent;
  border-radius: 35%;
  padding: 10px;
  border: 5px solid #1b1e28;
  cursor: pointer;
}

.overlay-button {
  display: block;
  width: 95%;
  background-color: #1b1e28;
  border-radius: 5px;
  color: #fff;
  padding: 15px;
  font-size: 16px;
  border: 0;
  margin: 0 auto;
  margin-bottom: 15px;
  text-transform: uppercase;
  text-align: center;
}
.overlay-button.success {
  background-color: #418258;
}
.overlay-button.failure {
  background-color: #954b4b;
}

.overlay-footer {
  padding: 0 15px;
}
/* ... */

